@@ -17,6 +17,11 @@ auditbeat.modules:
   {% endif -%}
 {%- endfor %}
 
+queue.mem:
+  events: 4096
+  flush.min_events: 8
+  flush.timeout: 0.1s
+
 output.file:
   path: '{{ output_file_path|default(beat.working_dir + "/output") }}'
   filename: {{ output_file_filename|default("auditbeat") }}
