@@ -18,6 +18,12 @@ tags: [
 	{%- endfor -%}
 {%- endif -%}]
 
+#================================ Queue =====================================
+
+queue.mem:
+  events: 4096
+  flush.min_events: 8
+  flush.timeout: 0.1s
 
 ############################# Output ############################################
 
